# raytracer

./: .gitignore  Cargo.toml  Makefile  renovate.json  rust-toolchain.toml  rustfmt.toml  scene.json
.github/workflows/: check.yaml
examples/: spheres.toml  test.toml
src/: aabb.rs  args.rs  body.rs  color.rs  constants.rs  graphics.rs  hit.rs  image.rs  lighting.rs  main.rs  material.rs  math.rs  optics.rs  physics.rs  prelude.rs  progress.rs  ray.rs  refraction.rs  scene.rs  surface.rs  tracer.rs
src/body/: sphere.rs
src/color/: cie_1964.rs  rgb.rs  xyz.rs
src/lighting/: cie_1964.rs  color.rs  rgb.rs  spectrum.rs  xyz.rs
src/math/: aabb.rs  hit.rs  point.rs  point3.rs  ray.rs  sequence.rs  stats.rs  uom.rs  vec.rs  vec2.rs  vec3.rs
src/optics/: attenuation.rs  consts.rs  hit.rs  material.rs  property.rs  refraction.rs  spectrum.rs
src/optics/material/: reflectance.rs  transmittance.rs
src/optics/material/transmittance/: refraction.rs
src/physics/: consts.rs  optics.rs  units.rs
src/physics/optics/: hit.rs  material.rs  ray.rs  spectrum.rs
src/physics/optics/material/: attenuation.rs  emittance.rs  property.rs  reflectance.rs  transmittance.rs
src/physics/optics/material/transmittance/: refraction.rs
src/physics/units/: bare.rs  quantity.rs
src/surface/: fog.rs  sphere.rs  triangle.rs
src/tracer/: bvh.rs  state.rs  viewport.rs
